[DUOS-841][risk=no] Test container updates (#831)
* address test container warning